cmake_minimum_required(VERSION 3.7)
FLTK_WRAP_UI(Ui CFluidWindow.fl)
ADD_LIBRARY(Ui CFluidWindow.cxx ${Ui_FLTK_UI_SRCS})

ADD_EXECUTABLE(foo display_image.cpp)
ADD_DEPENDENCIES(foo Ui)
TARGET_LINK_LIBRARIES(foo Ui)
TARGET_LINK_LIBRARIES(foo ${FLTK_LIBRARIES})
TARGET_LINK_LIBRARIES(foo ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(foo ${OPENCV_LIBRARIES})

